src/z80asm/z80asm2/t/20-preproc/expected/include_12.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/include_12.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/include_12.asm...
t/20-preproc/input/include_12.asm:1:13: error: Unexpected token after INCLUDE: input
    #include no input file
                ^
